app/assets/stylesheets/src/tachyons-custom.css
/*
 * Text colors
 */
.near-black { color: #2f2c29; }
.dark-gray { color: #4e443c; }
.mid-gray { color: #756f6a; }
.near-white { color: #fcfcfa; }
.orange { color: #c24a00; }
.blue { color: #0f758c; }

/*
 * Background colors
 */
.bg-tan { background-color: #fafaf6; }
.bg-dark-tan { background-color: #f2f2ee; }
.bg-orange { background-color: #ff6300; }
.bg-blue { background-color: #357edd; }
.bg-near-white { background-color: #fcfcfa; }

.b--dark-tan { border-color: #edede9; }

/*
 * Vertical alignment
 */
.v-tt { vertical-align: text-top; }

/*
 * Filters
 */
.filter-blur { filter: blur(8px); }

/*
 * Transitions
 */
.trans-o { transition: opacity .15s ease-in-out; }

/*
 * Hover / focus
 */
.hover-orange:hover { color: #e05e0b; }
.hover-orange:focus { color: #e05e0b; }
.hover-blue:hover { color: #0f758c; }
.hover-blue:focus { color: #0f758c; }
.hover-bg-orange:hover { background-color: #ff6300; }
.hover-bg-orange:focus { background-color: #ff6300; }
.hover-bg-blue:hover { background-color: #0388a6; }
.hover-bg-blue:focus { background-color: #0388a6; }

.hover-b-orange:focus { border-color: #e05e0b; }
.hover-shadow-orange:focus { box-shadow: 0 0 0 3px rgba(224,94,11,.3); }

.hover-u:hover { text-decoration: underline; }
.hover-u:active { text-decoration: underline; }

.no-underline:hover { text-decoration: none; }

/*
 * Fonts
 */
code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace; }

/*
 * Heights
 */
.max-vh-50 { max-height: 50vh; }

.max-vh-none {
  max-height: none;
}

@media screen and (min-width: 30em) {
  .max-vh-none-ns {
    max-height: none;
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .max-vh-none-m {
    max-height: none;
  }
}

@media screen and (min-width: 60em) {
  .max-vh-none-l {
    max-height: none;
  }
}

/*
 * Box shadows
 */
.shadow-subtle {
  box-shadow: 0 1px 2px rgba(0,0,0,.1);
}

@media screen and (min-width: 30em) {
  .shadow-subtle-ns {
    box-shadow: 0 1px 2px rgba(0,0,0,.1);
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .shadow-subtle-m {
    box-shadow: 0 1px 2px rgba(0,0,0,.1);
  }
}

@media screen and (min-width: 60em) {
  .shadow-subtle-l {
    box-shadow: 0 1px 2px rgba(0,0,0,.1);
  }
}

.shadow-deep {
  box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
}

@media screen and (min-width: 30em) {
  .shadow-deep-ns {
    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .shadow-deep-m {
    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
  }
}

@media screen and (min-width: 60em) {
  .shadow-deep-l {
    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
  }
}

/*
 * Negative margins
 */
.nl-1px { margin-left: -1px;}

/*
 * Opacity
 */
@media screen and (min-width: 30em) {
  .o-100-ns {
    opacity: 100;
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .o-100-m {
    opacity: 100;
  }
}

@media screen and (min-width: 60em) {
  .o-100-l {
    opacity: 100;
  }
}

/*
 * Z-indexes
 */
.z--1 { z-index: -1; }

@media screen and (min-width: 30em) {
  .z-1-ns {
    z-index: 1;
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .z-1-m {
    z-index: 1;
  }
}

@media screen and (min-width: 60em) {
  .z-1-l {
    z-index: 1;
  }
}

/*
 * Details / summary toggle
 */
.no-details-marker::-webkit-details-marker {
  display: none;
}

details .icon-chevron {
  transition: transform .1s ease-in;
}

details[open] .icon-chevron {
  transform: rotate(180deg);
}

